--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,4 +4,23 @@
 @import './keyframes.scss';
 @import './elements.scss';
 @import './typography.scss';
+@import './modifiers.scss';
+// #region Pages
 @import './Pages/backgrounds.scss';
+// #endregion Pages
+// #region Components
+@import './Components/horizontalStatIndicator.scss';
+@import './Components/topBar.scss';
+@import './Components/buttons.scss';
+// #endregion Components
+// #region Library Overrides
+@import './LibraryOverrides/antd.scss';
+// #endregion Library Overrides
+#app {
+    height: 100%;
+    width: 100%;
+}
+
+#appBody {
+    min-height: 550px;
+}
