--- a/src/styles/_modifiers.scss
+++ b/src/styles/_modifiers.scss
@@ -14,3 +14,11 @@
         }
     }
 }
+
+.is-flex {
+    display: flex;
+    &-column {
+        flex-direction: column;
+        display: flex;
+    }
+}
