--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,7 @@ $font: sans-serif;
 $PrimaryColor: #1f2933;
 $SecondaryColor: #999;
 
+$statIndicatorStrokeWidthSmall: 4px;
+$statIndicatorStrokeWidth: 6px;
+$statIndicatorStrokeWidthMedium: 8px;
+$statIndicatorStrokeWidthLarge: 10px;
