--- a/src/styles/Components/_buttons.scss
+++ b/src/styles/Components/_buttons.scss
@@ -10,34 +10,26 @@
 //     }
 // }
 
-.button {
-    &.has-icon {
-        
-    }
-}
-
 .icon-button {
     &-wrapper {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
-        @include setIconButtonSize(24, 'small');
-        @include setIconButtonSize(32, 'medium');
-        @include setIconButtonSize(48, 'large');
+        @include setIconButtonSize(24, "small");
+        @include setIconButtonSize(32, "medium");
+        @include setIconButtonSize(48, "large");
         &.is-circle {
             border-radius: 50%;
         }
         &:hover {
             cursor: pointer;
-            @include theme-aware('background-color', 'neutral-gray3');
+            @include theme-aware("background-color", "neutral-gray3");
             &.is-settings {
+                transform: scale(1.2);
                 & .icon-button {
-                    zoom: 1.2;
-                    @include theme-aware('color', 'label-secondary');
+                    @include theme-aware("color", "label-secondary");
                 }
-            }    
+            }
         }
-        
     }
-    
 }
